--- a/css/styles.css
+++ b/css/styles.css
@@ -10249,7 +10249,7 @@ h3 {
 }
 
 .floating-label-form-group-with-focus label {
-  color: #1abc9c;
+  color: #2c3e50;
 }
 
 form .row:first-child .floating-label-form-group {
