--- a/css/styles.css
+++ b/css/styles.css
@@ -6103,7 +6103,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #148f77 !important;
+  background-color: #5393ff !important;
 }
 
 .bg-secondary {
@@ -10006,6 +10006,7 @@ h3 {
 .page-section .page-section-heading {
   font-size: 2.25rem;
   line-height: 2rem;
+  color: #12173B !important;
 }
 @media (min-width: 992px) {
   .page-section .page-section-heading {
@@ -10141,12 +10142,16 @@ h3 {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
 }
+.masthead-subheading{
+  color: #001C7A !important;
+}
 .masthead .masthead-heading {
   font-size: 2.75rem;
+  color: #12173B;
   line-height: 2.75rem;
 }
 .masthead .masthead-subheading {
-  font-size: 1.25rem;
+  font-size: 1.25rem;  
 }
 .masthead .masthead-avatar {
   width: 15rem;
